@@ -33,3 +33,5 @@ ggplot2 0.8.5 (2009-XX-XX) ----------------------------------------
   naming convention of all other scales (Fixes #47)
 * scale_colour_gradient, scale_colour_gradient2 & scale_colour_gradientn now
   have formatter argument to match scale_continuous
+* legends will only merge if both the title and all labels are the same.
+  (Fixes #16)
